# rust_examples

./: (B[m  clear_target_forlders.sh
chashmap/: Cargo.toml  README.md
chashmap/src/: lib.rs
compiler_wrapper/: Cargo.toml  Makefile  TODO  compiler_wrapper_config.json  ios_osx_bash.env  ios_osx_fish.env
compiler_wrapper/reference/: CC_cache.sh
compiler_wrapper/src/: ccache.rs  distcc.rs  helpers.rs  main.rs
currencies_request/: .cargo-remote.toml  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  TODO  bot_start.sh  start.sh  token.txt
currencies_request/.cargo/: config
currencies_request/build_open_ssl/: build.sh
currencies_request/currencies_request_cli/: Cargo.toml
currencies_request/currencies_request_cli/src/: main.rs
currencies_request/currency_lib/: Cargo.toml
currencies_request/currency_lib/src/: lib.rs
currencies_request/docker/: Dockerfile  Dockerfile_another  Dockerfile_source  build.sh
currencies_request/open_ssl_armv6/_include/: opensslconf.h
currencies_request/open_ssl_armv6/include/: opensslv.h
currencies_request/open_ssl_armv6_docker/: Dockerfile_musl  build.sh
currencies_request/open_ssl_gnu_armv6_compiled/: libssl.so.1.1
currencies_request/raspberry_qemu/: test_raspi_2.sh
currencies_request/sql/: create_database.sql
currencies_request/src/: alpha.rs  central.rs  constants.rs  errors.rs  lib.rs  main.rs  sber.rs  types.rs  vtb.rs
currencies_request/src/banks/: alpha.rs  central.rs  sber.rs  vtb.rs
currencies_request/src/errors/: mod.rs
currencies_request/src/types/: types.rs
currencies_request/support/open_ssl_armv6_docker/: Dockerfile_gnu  Dockerfile_musl
currencies_request/support/open_ssl_gnu_armv6_compiled/: libcrypto.so.1.1
currencies_request/support/rust_memory_profile_x64_docker/: Dockerfile  build.sh
currencies_request/telegram_bot/: Cargo.toml
currencies_request/telegram_bot/src/: app_context.rs  constants.rs  currency.rs  currency_check_status.rs  currency_users_storrage.rs  database.rs  error.rs  main.rs  (+1 more)
dir_split/: Cargo.toml  Makefile
dir_split/src/: app_arguments.rs  cache.rs  helpers.rs  main.rs
dragonbones_validator/: .gitignore  Cargo.toml  Makefile
dragonbones_validator/src/: app_arguments.rs  main.rs  pvr.rs  types.rs
file_upload_proxy/: .gitignore  Cargo.toml  Docker-compose.yml  Dockerfile  Makefile
file_upload_proxy/env/: test.env.asc
file_upload_proxy/src/: app_arguments.rs  auth_token_provider.rs  error.rs  handlers.rs  helpers.rs  main.rs  types.rs
habr_headers/: Cargo.toml
habr_headers/src/: main.rs
habr_headers_async/: Cargo.toml  Makefile
habr_headers_async/src/: article.rs  client.rs  error.rs  load_save.rs  main.rs  page.rs  print_support.rs  workers_pool.rs
image_quality_decreaser/: Cargo.toml  Makefile
image_quality_decreaser/src/: app_parameters.rs  image_file_type.rs  main.rs  png.rs
images_info/: Cargo.toml  Cross.toml  Makefile
images_info/src/: app_arguments.rs  main.rs  pvr.rs  types.rs
ixy.rs/: Cargo.toml  Makefile
ixy.rs/examples/: echoer.rs  generator.rs  pcap.rs
ixy.rs/src/: ixgbe.rs  lib.rs  memory.rs  pci.rs  vfio.rs  virtio.rs  virtio_constants.rs
jenkins_stat/: Cargo.toml  Makefile  build.rs
jenkins_stat/src/: lib.rs
json_minifier/: Cargo.toml  Makefile
json_minifier/src/: app_arguments.rs  helpers.rs  main.rs  types.rs
lang_filter/: .gitignore  Cargo.toml  Makefile  test_config.json
lang_filter/src/: main.rs  types.rs
mem-hog/: Cargo.toml
mem-hog/src/: lib.rs  main.rs
odroid_web_server/: .gitignore  Cargo.toml  Makefile
odroid_web_server/html/: image.html  index.html  login_form.html
odroid_web_server/rustls_certificates/: cert.pem
odroid_web_server/src/: main.rs  server.rs
odroid_web_server/static/: login_form.html
ogg_minifier/: Cargo.toml  Makefile
ogg_minifier/src/: _json.rs  app_arguments.rs  helpers.rs  main.rs  types.rs
osx_battery_control/: Cargo.toml  Makefile  TODO  build.rs  test.h
osx_battery_control/smc-command/: smc.c  smc.h
osx_battery_control/src/: bindings.rs  main.rs
plinga_server/: Cargo.toml  test_environment.env.asc
plinga_server/src/: auth.rs  main.rs  payment_info.rs  process_pay.rs  static_forward.rs  validate_params.rs
prepare_base_packs/: Cargo.toml  Makefile  test_config.json
prepare_base_packs/src/: app_arguments.rs  main.rs  regex.rs  types.rs
prepare_dynamic_packs/: .gitignore  Cargo.toml  Makefile
prepare_dynamic_packs/src/: app_arguments.rs  main.rs  types.rs
prepare_dynamic_packs/test_config/: dynamic_packs.json  dynamic_packs_test_1.json
pvrgz_to_webp_atlas_converter/: .gitignore  Cargo.toml  Makefile
pvrgz_to_webp_atlas_converter/src/: app_arguments.rs  cache.rs  helpers.rs  json.rs  json_fix.rs  main.rs  pvrgz.rs  pvrgz_to_webp.rs  types.rs
raytracer_on_rust/: .gitignore  Cargo.toml  Makefile
raytracer_on_rust/src/: figures.rs  main.rs  render.rs  scene.rs  structs.rs  traits.rs
remote_file_converter/: .gitignore  Cargo.toml  build.rs
remote_file_converter/src/: lib.rs
rust_extention_lib/: .gitignore  Cargo.toml  Makefile
rust_extention_lib/cpp_app/: main.cpp
rust_extention_lib/include/: rust_extention_lib.h
rust_extention_lib/src/: icmp_function.rs  lib.rs  main.rs
slack_command_handler/: .gitignore  Cargo.toml  Dockerfile  Makefile  TODO  rustfmt.toml  test_environment.env.asc
slack_command_handler/scripts/: response_test.sh
slack_command_handler/src/: active_views_holder.rs  application_data.rs  main.rs  response_awaiter_holder.rs  slack_command.rs  slack_window.rs
slack_direct_messenger/: Cargo.toml  Makefile
slack_direct_messenger/scripts/: test_upload_script_template.sh
slack_direct_messenger/src/: lib.rs  main.rs  request_examples.rs
slack_direct_messenger/tests/: test.rs
sqlite3_insert_benchmarks/: .gitignore  Cargo.toml  README.md  basic.db-journal  bench.sh  mysql_2_start.sh  postgres_2_start.sh
sqlite3_insert_benchmarks/src/: lib.rs
test14_async/: Cargo.toml
test14_async/src/: async_await_test.rs  executor_test.rs  main.rs
test18_serde/: Cargo.toml
test18_serde/src/: main.rs
(+1539 files in other folders)
