[package]
name = "chashmap"
version = "2.2.2"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Fast, concurrent hash maps with extensive API."
repository = "https://gitlab.redox-os.org/redox-os/chashmap"
documentation = "https://docs.rs/chashmap"
license = "MIT"
keywords = ["hashmap", "concurrent", "parking_lot", "lock", "map"]
exclude = ["target", "Cargo.lock"]

[dependencies]
parking_lot = { version = "0.11", features = ["owning_ref"] }
owning_ref = "0.4"
