[package]
name = "compiler_wrapper"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
num_cpus = "1.13.0"
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"