[package]
name = "dir_split"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
walkdir = "2.3"
eyre = "0.6"
color-eyre = "0.5"
pretty_env_logger = "0.4"
log = "0.4"
brotli = "3.3"
flate2 = "1.0"