[package]
name = "file_upload_proxy"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-error = "0.1"
structopt = "0.3"
tokio = {version = "1.13", features = ["full"]}
hyper = {version = "0.14", features = ["full"]}
hyper-rustls = "0.22"
futures = "0.3"