[package]
name = "file_upload_proxy"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-error = "0.1"
structopt = "0.3"
tokio = {version = "1.13", features = ["full"]} # TODO: Оставить нужное только
hyper = {version = "0.14", features = ["full"]} # TODO: Оставить нужное только
hyper-rustls = "0.22"
futures = "0.3"
uuid = {version = "0.8", features = ["v4"]}
chrono = "0.4"
mime = "0.3"
rsa = "0.5"
sha2 = "0.9"
urlencoding = "2.1"
base64 = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-compression = {version = "0.3", features = ["tokio", "gzip"]}
tokio-util = {version = "0.6", features = ["io"]}