[package]
name = "habr_headers"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.11.0"
rayon = "1.3.0"
prettytable-rs = "0.8.0"
serde = "1.0.104"
serde_json = "1.0.48"
# itertools = "0.8.2"