[package]
name = "habr_headers_async"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.3.6", features=["full"]} # https://docs.rs/crate/tokio/0.3.6/features
reqwest = {version="0.10.10"}
lazy_static = "1.4.0"
# rayon = "1.5.0"
scraper = "0.12.0"