[package]
name = "habr_headers_async"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
flame_it = ["flame", "flamer"]

[dependencies]
tokio = {version="0.2.24", features=["full"]} # https://docs.rs/crate/tokio/0.3.6/features
reqwest = {version="0.10.10"}
lazy_static = "1.4.0"
rayon = "1.5.0"
scraper = "0.12.0"
num_cpus = "1.13.0"
futures = "0.3.8"
dirs = "3.0.1"
serde_json = "1.0.60"
flame = {version="0.2.2", optional=true}
flamer = {version="0.4.0", optional=true}

[dev-dependencies]