[package]
name = "image_quality_decreaser"
version = "0.1.0"
authors = ["DevNul <devnulpavel@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
walkdir = "2.3.2"
rayon = "1.5.0"
log = "0.4.14"
env_logger = "0.8.3"
scopeguard = "1.1.0"
quick-error = "2.0.0"
uuid = { version = "0.8.2", features = ["v4"] }