[package]
name = "images_info"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-panic = "1.0"
eyre = "0.6"
color-eyre = { version = "0.5", default-features = false }
structopt = "0.3"
rayon = "1.5"
image = "0.23"
walkdir = "2.3"
log = "0.4"
env_logger = "0.8"
infer = "0.5"
which = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4"