[package]
name = "images_info"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-panic = "1.0"
eyre = "0.6"
color-eyre = { version = "0.5", default-features = false, features = ["track-caller"] }
structopt = "0.3"
rayon = "1.5"
walkdir = "2.3"
imagesize = "0.8"
flate2 = "1.0"
byteorder = "1.4"