[package]
name = "ixy"
version = "0.1.0"
authors = ["Simon Ellmann <simon.ellmann@tum.de>"]
edition = "2018"

# Настройки линтинга в самом проекте
# - https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section
# - https://doc.rust-lang.org/rustc/lints/index.html

[lints.rust]
rust_2021_compatibility = { level = "deny", priority = 0 }

# [lints.clippy]
# rust_2021_compatibility = { level = "deny", priority = 0 }

[dependencies]
libc = "^0.2.150"
byteorder = "^1.5.0"
log = "^0.4.20"
lazy_static = "^1.4.0"

[dev-dependencies]
simple_logger = "^4.3.0"
