# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "jenkins_stat"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

[dependencies]
tonic = "0.2.0"
prost = "0.6.1"
tokio = { version="0.2.14", features = ["full"] } # features = ["full", "macros", "rt-threaded", "sync", "stream", "time"]
futures = "0.3.4"
futures-core = "0.3.4"
futures-util = "0.3.4"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
fs2 = "0.4.3"
bytesize = "1.0.0"
clap = "2.33.0"

[build-dependencies]
tonic-build = "0.2.0"