[package]
name = "mem-hog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[feature]
default = []
tikv-jemallocator = ["dep:tikv-jemallocator"]
# jemallocator = ["dep:jemallocator"]


[dependencies]
libc = "0.2"
rand = "0.8.4"
tikv-jemallocator = { version = "0.5", optional = true }
# jemallocator = { version = "0.5", optional = true }