[package]
name = "mem-hog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[feature]
default = []
tikv-jemallocator = ["dep:tikv-jemallocator"]
# jemallocator = ["dep:jemallocator"]


[dependencies]
libc = "^0.2"
rand = "^0.8.4"
cast = "^0.3.0"
uuid = {version = "^1.3.1", features = ["v4", "fast-rng"]}
jemallocator = { version = "^0.5", optional = true }
# tikv-jemallocator = { version = "^0.5", optional = true }
# smallstr = {version = "^0.3.0", features = ["std"]}