[package]
name = "odroid_web_server"
version = "0.1.0"
authors = ["DevNul <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3.1.0"} # features = ["rustls"]
actix-service = "1.0.6"
actix-identity = "0.3.1"
# actix-web-middleware-redirect-https = "1.0.0"
actix-files = "0.4.0"
# tokio = "0.3.1"
futures = "0.3.4"
# rustls = "0.18.1"
listenfd = "0.3.3" # Нужен для автоматической перезагрузки сервера
serde = {version = "1.0.117", features = ["derive"]}
log = "0.4.11"
env_logger = "0.8.1"
md5 = "0.7.0"
rand = "0.7.3"
scopeguard = "1.1.0"
regex = "1.4.1"
lazy_static = "1.4.0"
# rscam = "0.5.5"
uuid = {version = "0.8.1", features = ["v4"]}
# dirs = "3.0.1"
