[package]
name = "osx_battery_control"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libloading = "0.5"
libc = "0.2.71"
mach = "0.3.2"
IOKit-sys = "0.1.5"

[build-dependencies]
cc = "1.0.54"
bindgen = "0.54.0"