[package]
name = "plinga_server"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
pretty_env_logger = "0.4.0"
serde = "1.0.120"
serde_json = "1.0.61"
futures = "0.3.12"
md5 = "0.7.0"
actix-web = {version = "3.3.2", features = ["rustls"]}
tokio = {version = "0.2.24", features = ["fs"]}