[package]
name = "prepare_dynamic_packs"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-panic = "1.0"
structopt = "0.3"
rayon = "1.5"
walkdir = "2.3"
pretty_env_logger = "0.4"
# env_logger = "0.8"
log = "0.4"
