[package]
name = "prepare_dynamic_packs"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-backtrace = "0.5"
structopt = "0.3"
rayon = "1.5"
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
# regex = "1.5"
fancy-regex = "0.6"
