[package]
name = "pvrgz_to_webp_atlas_converter"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
scopeguard = "1.1"
which = "4.1"
flate2 = "1.0"
eyre = "0.6"
color-eyre = "0.5"
color-backtrace = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-error = "0.1"
sled = "0.34"
md5 = "0.7"
uuid = { version = "0.8", features = ["v4"] }
# image = "0.23"
# pretty_env_logger = "0.4"
# log = "0.4"
# uuid = { version = "0.8", features = ["v4"] }
