# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "raytracer_on_rust"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

[features]
# default = ["multi_threaded", "allow_unsafe"]        # Дефолтные фичи
# default = ["multi_threaded"]        # Дефолтные фичи
# default = []        # Дефолтные фичи

multi_threaded = ["rayon"]  # Фича многопоточности, для которой нужен rayon
allow_unsafe = []  # Дает ускорение для многопоточного режима но ценой использования unsafe

[dependencies]
image = "0.23.7"
rayon = { version = "1.3.1", optional = true } # Помечаем как optional, чтобы работала условная компиляция
rand = "0.7.3"