# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "remote_file_converter"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.2.0"
prost = "0.6.1"
tokio = { version="0.2.14", features = ["macros"] } # features = ["full"]

[build-dependencies]
tonic-build = "0.2.0"