[package]
name = "rust_extention_lib"
version = "0.1.0"
authors = ["DevNul <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_extention_lib"
crate-type = ["staticlib"] # Создаем статическую библиотеку, для python - cdylib, варианты: dylib, rlib, staticlib, cdylib, proc-macro

[dependencies]
