[package]
name = "rust_extention_lib"
version = "0.1.0"
authors = ["DevNul <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_extention_lib"
crate-type = ["staticlib"] # Создаем статическую библиотеку, для python - cdylib, варианты: dylib, rlib, staticlib, cdylib, proc-macro

[profile.dev]
# opt-level = 2
# debug = true # Дебажная информация
# rpath = false
# lto = false # Оптимизация линковки, чтобы бинарь был поменьше
# debug-assertions = true
# codegen-units = 16 # Степень параллельной сборки?
# panic = "unwind"   # Что  делсть в случае паники, "abort"
# incremental = true # Инкрементальная сборка
# overflow-checks = true

[profile.release]
# debug = true
# opt-level = 2
# rpath = false
# lto = false
# debug-assertions = false
# codegen-units = 16 # Помогает на Raspberry Pi установка в 1
# panic = "unwind"
# incremental = false
# overflow-checks = false

[dependencies]
