[package]
name = "slack_command_handler"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
actix-rt = "1.1.1"
listenfd = "0.3.3"
log = "0.4.11"
env_logger = "0.7.1"
serde = {version="1.0.116", features=["derive"]}
serde_json = "1.0.57"
reqwest = {version="0.10.8", features=["json"]}