[package]
name = "slack_command_handler"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
futures = "0.3.8"
listenfd = "0.3.3"
log = "0.4.11"
env_logger = "0.7.1"
serde = {version="1.0.116", features=["derive"]}
serde_json = "1.0.57"
serde-xml-rs = "0.4.0"
async-trait = "0.1.42"
reqwest = {version = "0.10.9", features = ["json"]}
http = "0.2.1"
regex = "1.4.2"
lazy_static = "1.4.0"
#sqlx = {version="0.4.1", default-features = false, features=["runtime-actix-native-tls", "sqlite"]}

[dev-dependencies]
actix-rt = "1.1.1"