[package]
name = "slack_command_handler"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="3.2.0", default-features = false, features=["rustls"]}
rustls = "0.18.1"
futures = "0.3.8"
listenfd = "0.3.3"
log = "0.4.11"
env_logger = "0.7.1"
serde = {version="1.0.116", features=["derive"]}
serde_json = "1.0.57"
serde-xml-rs = "0.4.0"
async-trait = "0.1.42"
reqwest = {version = "0.10.10", default-features = false, features = ["json", "rustls-tls"]}
http = "0.2.1"
regex = "1.4.2"
lazy_static = "1.4.0"
clap = "2.33.3"
qrcode = "0.12.0"
image = "0.23.12"
uuid = { version = "0.8.1", features = ["v4"] }
dirs = "3.0.1"
#sqlx = {version="0.4.1", default-features = false, features=["runtime-actix-rustls", "sqlite"]}

[dependencies.slack_client_lib]
git = "https://github.com/DevNulPavel/slack_client_lib.git"
rev = "3397268383ae7cf6fb9a40b0460a2335ed7ce928"
features=["rustls"]
# tag="v1.0.2"

[dev-dependencies]
actix-rt = "1.1.1"