[package]
name = "slack_direct_messenger"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
clap = "2.33.0"
tokio = "0.2.0-alpha.6" # tokio = { version = "0.2.0-alpha.6", features = ["full"] }
hyper = "0.13.0-alpha.4"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] } # Условная компиляция фич "blocking", "gzip"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
qrcode = "0.11.1"
image = "0.22.3"
uuid = { version = "0.8.1", features = ["v4"] }
# scopeguard = "1.0.0"