[package]
name = "sqlite3_insert_benchmarks"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
sqlx = { version = "^0.5", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = {version = "^1", features = ["full"]}
rand = "^0.8"
num_cpus = "^1"
rusqlite = {version = "^0.25", features = ["serde_json", "bundled"]}
smallstr = "^0.3"
oneshot = "^0.1"
sled = "^0.34"
bincode = "^1"
serde = {version = "^1", features = ["derive"]}
smallvec = "^1"
nohash-hasher = "^0.2"
futures = "^0.3"
# async-oneshot = "^0.5"