[package]
name = "sqlite3_insert_benchmarks"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
sqlx = { version = "^0.5", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = {version = "^1", features = ["full"]}
rand = "^0.8"
num_cpus = "^1"
rusqlite = {version = "^0.25", features = ["serde_json", "bundled"]}
smallstr = "^0.3"
oneshot = "^0.1"
sled = {version = "^0.34", features = ["compression"]}
bincode = "^1"
serde = {version = "^1", features = ["derive"]}
smallvec = "^1"
nohash-hasher = "^0.2"
futures = "^0.3"
deadpool = "^0.9"
async-trait = "^0.1"
flume = "^0.10"
# async-oneshot = "^0.5"