[package]
name = "test14_async"
version = "0.1.0"
authors = ["DevNul <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timer_future = {path="libs/timer_future"}
futures-preview = "0.3.0-alpha.19"
